# HAVAC

./: .gitignore  .gitmodules  CMakeLists.txt  LICENSE  README.md  hls.app
Havac3Solution/: Havac3Solution.aps  Havac3Solution.directive  cosim.tcl  directives.tcl  script.tcl
PhmmReprojection/: PhmmReprojection.cpp  PhmmReprojection.h
benchmark/: CMakeLists.txt  HavacBenchmark.cpp  HavacBenchmark.hpp  benchmark.cpp  hmmDbByLength.py  makefile  readme.txt  runtime_table.py
device/: HavacHls.cpp  HavacHls.hpp  HitReporting.cpp  HitReporting.hpp  PublicDefines.h  ScoreQueue.cpp  ScoreQueue.hpp  Sequence.cpp  Sequence.hpp
device/device/: HavacHls.cpp  HavacHls.hpp  PublicDefines.h
device/test/: softwareTestbench.cpp  softwareTestbench.hpp
device/test/byCellComparator/: byCellComparator.cpp  byCellComparator.hpp
device/test/generator/: hmmSeqGenerator.cpp  hmmSeqGenerator.h
device/test/softSsv/: SoftSsv.cpp
host/: Havac.cpp  Havac.hpp  HavacHostMain.cpp  HavacHostMain.hpp  HavacHwClient.cpp  HavacHwClient.hpp  HavacSSV.cpp  HavacSSV.hpp  HitVerifier.cpp  HitVerifier.hpp
host/host/: Havac.cpp  Havac.hpp  HavacHostMain.hpp  HavacHwClient.cpp  HavacHwClient.hpp  HavacSSV.cpp  HitVerifier.cpp
host/host/phmm/: PhmmPreprocessor.cpp  PhmmPreprocessor.hpp
host/host/sequence/: SequencePreprocessor.cpp  SequencePreprocessor.hpp
host/phmm/: PhmmPreprocessor.cpp  PhmmPreprocessor.hpp
host/sequence/: SequencePreprocessor.cpp  SequencePreprocessor.hpp
host/test/: Ssv.cpp
host/test/RefernceComparisonTest/: ReferenceComparisonTest.cpp  ReferenceComparisonTest.hpp  Ssv.cpp  Ssv.hpp  makefile
host/test/benchmark/: benchmark.cpp  makefile
host/test/multiInputTest/: makefile  multiInputTest.cpp  multiInputTest.hpp
host/types/: HardwareHitReport.cpp  HardwareHitReport.hpp  HavacHit.cpp  HavacHit.hpp  VerifiedHit.cpp  VerifiedHit.hpp
lib/PhmmReprojection/: PhmmReprojection.cpp  PhmmReprojection.h
test/: .clang-format  constants.h  softwareTestBench.h  softwareTestbench.cpp  softwareTestbench.hpp
test/byCellComparator/: byCellComparator.cpp  byCellComparator.hpp
test/generator/: hmmSeqGenerator.cpp  hmmSeqGenerator.h
test/hmmerSsvRef/: hmmerSsvRef.cpp  makefile
test/hmmerValidation/: hmmerHit.cpp  hmmerHit.hpp  hmmerValidation.cpp  makefile
test/softSsv/: SoftSsv.cpp
test/test/: softwareTestbench.cpp  softwareTestbench.hpp
test/test/softSsv/: SoftSsv.cpp  SoftSsv.h
